# mpd-mpris-bridge-rs

./: Cargo.toml  README.md
src/: main.rs
