[package]
name = "mpd-mpris-bridge"
version = "0.1.0"
edition = "2021"
description = "Expose MPRIS infos and controls to MPD clients"
authors = ["SpiritCroc <dev@spiritcroc.de>"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "cargo"] }
env_logger = "0.11.8"
log = "0.4.27"
mpris = "2.0.1"
tokio = { version = "1.44.2", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
